--- a/proso_questions_client/static/sass/_practice.sass
+++ b/proso_questions_client/static/sass/_practice.sass
@@ -110,3 +110,16 @@ timer
   li.next
     border-width: 2px 2px 0 0
 
+
+@media (max-width: 767px)
+  .practice 
+    .question 
+      font-size: 16px
+      margin: 0
+      padding: 5px 
+  .summary
+    .pull-right
+      float: none !important
+      .btn
+        display: block
+        margin-left: 0
