--- a/proso_questions_client/static/sass/_view-questions.sass
+++ b/proso_questions_client/static/sass/_view-questions.sass
@@ -17,6 +17,11 @@
   .questions-list
     padding: 15px
 
+@media (max-width: 767px)
+  .questions-item
+    .category
+      display: none
+
 .questions-list
   paper-radio-button
     display: block
