--- a/proso_questions_client/static/sass/_welcome-page.sass
+++ b/proso_questions_client/static/sass/_welcome-page.sass
@@ -103,6 +103,7 @@ html
   height: 100%
   padding-right: 0px
   padding-left: 15px
+  padding-bottom: 30px
 
 
 .homepage
@@ -115,7 +116,6 @@ html
   min-width: calc(100% - 380px)
   height: auto
   top: 45px
-  z-index: 100
   -webkit-animation: slideInRight .5s ease-out
   -moz-animation: slideInRight .5s ease-out
   animation: slideInRight .5s ease-out
@@ -236,7 +236,7 @@ img
   #feedback
     display: none
   #ng-view
-    top: 65px
+    top: 64px
       top: 65px
     width: 100%
   .welcome-page
@@ -258,6 +258,9 @@ img
   #wrap 
     position: relative
     width: 100%
-    padding: 0
+    padding-left: 0px
   .row
     margin: 0
+
+.material-whiteframe-z5
+  z-index: initial
